# lolcatpp

./: .gitignore  CMakeLists.txt  README.md  flake.nix
.github/workflows/: release.yml
cmake/: CPackProjectConfig.cmake
deployment/: deploy_aur_binary.sh  deploy_aur_source.sh
nix/: package.nix
scripts/: install.ps1  install.sh
src/: ansiparser.cpp  ansiparser.hpp  args.cpp  format.hpp  main.cpp  rainbow.cpp  rainbow.hpp  terminal.cpp  terminal.hpp  utf-8.cpp  utf-8.hpp
